2007-09-12  Bruno coudoin  <bruno.coudoin@free.fr>

	- revove this method to create shape game activity as
	the one in tools/gcompris_shapegame.py that is a gimp script
	is much easier to use.

	* tools/shapegame/HOWTO:
	* tools/shapegame/Makefile:
	* tools/shapegame/dt/Makefile:
	* tools/shapegame/dt/README:
	* tools/shapegame/dt/dt.cpp:
	* tools/shapegame/dt/dt.h:
	* tools/shapegame/dt/image.h:
	* tools/shapegame/dt/imconv.h:
	* tools/shapegame/dt/imutil.h:
	* tools/shapegame/dt/misc.h:
	* tools/shapegame/dt/pnmfile.h:
	* tools/shapegame/nice_target_spot.cpp:

2007-09-12  Bruno coudoin  <bruno.coudoin@free.fr>

	- Added support for Breton by Alan Monfort.

	* configure.in:
	* docs/gcompris2spip.pl:
	* po/ChangeLog:
	* po/br.po:
	* src/gcompris/config.c:

2007-09-10  Bruno coudoin  <bruno.coudoin@free.fr>

	- removed unmaitained spec file
	- fixed menu file not to include icon extension
	- fixed bug#475301 missing freetype includes to compile libgnomecanvas

	* configure.in:
	* gcompris-edit.desktop.in:
	* gcompris.desktop.in:
	* src/libgnomecanvas/Makefile.am:

2007-09-09  Bruno coudoin  <bruno.coudoin@free.fr>

	* Makefile.am: no more distribute an rpm spec file
	* gcompris.spec.in: deleted

	*** RELEASE 8.4 ***

2007-09-06  Bruno Coudoin  <bruno.coudoin@free.fr>

	* src/boards/memory.c: space sound 2 was twice in the list. If they were
	  both selected in the game, the children was proposed the same sound
	  in 4 spot making the game bugged.

	* src/boards/python/login.py: fixed a little bug, in text entry mode
	  it was not displayed again if you open/close the help.

2007-09-01  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/skins/babytoy/button_large3.png: created a larger button from button_large.png
	* boards/skins/gartoon/button_large3.png: created a larger button from button_large.png
	* src/boards/shapegame.c: (shapegame_init_canvas): use the larger button
	* boards/doubleentry/board3_0.xml.in: fixed a typo, A3 was not working
